[tool.poetry]
name = "termcast"
version = "0.1.0"
description = "Podcast CLI downloader"
authors = ["Kevin Dienst <axi0m@users.noreply.github.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
feedparser = "^6.0.10"
opml = "^0.5"
rich = "^12.4.4"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
